Added Multithreading for remote operations
--> fixes #100

--- a/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
@@ -298,7 +298,7 @@
 					<MultiBinding Converter="{StaticResource MBOP}" ConverterParameter="OR">
 						<Binding Path="Settings.IsReadOnlyMode" />
 						<Binding Path="SelectedNote.IsLocked" />
-						<Binding Path="Repository.NotSupportsTags" />
+						<Binding Path="Repository.SupportsTags" Converter="{conv:NegateBool}" />
 					</MultiBinding>
 				</ctrl:TagEditor2.Readonly>
 			</ctrl:TagEditor2>
