--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -16,7 +16,7 @@
 		WindowStartupLocation="CenterOwner"
 		Closed="DialogWindow_Closed"
 		Icon="/Resources/IconMain.png"
-		Title="AlephNote - Configuration" MinHeight="300" MinWidth="300" Height="735" Width="700">
+		Title="AlephNote - Configuration" MinHeight="300" MinWidth="300" Height="750" Width="700">
 	<Window.Resources>
 		<locconv:CreatePluginSettingsGrid x:Key="CreateGridConv" />
 	</Window.Resources>
@@ -270,7 +270,6 @@
 									<Grid.RowDefinitions>
 										<RowDefinition Height="*" />
 										<RowDefinition Height="*" />
-										<RowDefinition Height="*" />
 									</Grid.RowDefinitions>
 
 									<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Remember scroll position per note (permanent)"  IsChecked="{Binding Settings.RememberScroll}" />
@@ -289,16 +288,58 @@
 									<Grid.RowDefinitions>
 										<RowDefinition Height="*" />
 										<RowDefinition Height="*" />
-										<RowDefinition Height="*" />
 									</Grid.RowDefinitions>
 
 									<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Auto focus editor" IsChecked="{Binding Settings.AutofocusScintilla}" />
 									<ctrl:PHelpBtn Grid.Row="0" Grid.Column="1" HelpProperty="AutofocusScintilla" Margin="2,0" VerticalAlignment="Center" />
 
-									<CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Show tag autocompletion"  IsChecked="{Binding Settings.TagAutocomplete}" />
+								</Grid>
+							</Grid>
+						</GroupBox>
 
-									<CheckBox      Grid.Row="2" Grid.Column="0" Margin="2" Content="Automatically sort tags"  IsChecked="{Binding Settings.AutoSortTags}" />
-									<ctrl:PHelpBtn Grid.Row="2" Grid.Column="1" HelpProperty="AutoSortTags" Margin="2,0" VerticalAlignment="Center" />
+						<GroupBox Header="Tag bar" Padding="4">
+							<Grid>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="1*" />
+									<ColumnDefinition Width="10" />
+									<ColumnDefinition Width="1*" />
+								</Grid.ColumnDefinitions>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto" />
+									<RowDefinition Height="Auto" />
+									<RowDefinition Height="Auto" />
+									<RowDefinition Height="Auto" />
+									<RowDefinition Height="Auto" />
+								</Grid.RowDefinitions>
+
+								<Grid Grid.Row="0" Grid.Column="0">
+									<Grid.ColumnDefinitions>
+										<ColumnDefinition Width="*" />
+										<ColumnDefinition Width="Auto" />
+									</Grid.ColumnDefinitions>
+									<Grid.RowDefinitions>
+										<RowDefinition Height="*" />
+										<RowDefinition Height="*" />
+									</Grid.RowDefinitions>
+
+									<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Automatically sort tags"  IsChecked="{Binding Settings.AutoSortTags}" />
+									<ctrl:PHelpBtn Grid.Row="0" Grid.Column="1" HelpProperty="AutoSortTags" Margin="2,0" VerticalAlignment="Center" />
+
+									<CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Show tag autocompletion"  IsChecked="{Binding Settings.TagAutocomplete}" />
+								</Grid>
+
+								<Grid Grid.Row="0" Grid.Column="2">
+									<Grid.ColumnDefinitions>
+										<ColumnDefinition Width="*" />
+										<ColumnDefinition Width="Auto" />
+									</Grid.ColumnDefinitions>
+									<Grid.RowDefinitions>
+										<RowDefinition Height="*" />
+										<RowDefinition Height="*" />
+									</Grid.RowDefinitions>
+
+									<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Show button in the tab bar"  IsChecked="{Binding Settings.ShowTagButton}" />
+									<ctrl:PHelpBtn Grid.Row="0" Grid.Column="1" HelpProperty="ShowTagButton" Margin="2,0" VerticalAlignment="Center" />
 
 								</Grid>
 							</Grid>
