Show numbers of selected notes at status bar
--> fixes #110

--- a/Source/AlephNote.App/WPF/Controls/NotesViewHierachical.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesViewHierachical.xaml
@@ -90,6 +90,7 @@
 					  AllowDrop="True"
 					  Drop="HierachicalNotesList_Drop"
 					  KeyDown="HierachicalNotesList_KeyDown"
+					  SelectionChanged="HierachicalNotesList_OnSelectionChanged"
 					  services:MultiDataTemplateService.MultiDataTemplateSelector="{Binding Settings.NotePreviewStyle}"
 					  HorizontalContentAlignment="Stretch"
 					  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
