--- a/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
@@ -40,6 +40,7 @@
 					  AllowDrop="True"
 					  Drop="NotesList_Drop"
 					  KeyDown="NotesList_KeyDown"
+					  SelectionChanged="NotesList_OnSelectionChanged"
 					  services:MultiDataTemplateService.MultiDataTemplateSelector="{Binding Settings.NotePreviewStyle}"
 					  HorizontalContentAlignment="Stretch"
 					  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
