--- a/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
@@ -253,6 +253,7 @@
 			</Grid.RowDefinitions>
 
 			<TextBox Grid.Row="0" BorderBrush="Transparent" BorderThickness="0"  
+					 x:Name="TitleTextBox"
 					 Background="Transparent"
 					 Foreground="{ext:ThemeBinding 'window.notetitle:foreground'}" 
 					 FontSize="{Binding Settings.TitleFontSize, Converter={locconv:FontSizeToInt}}" 
@@ -292,10 +293,11 @@
 			</Image>
 
 			<ctrl:TagEditor2 Grid.Row="1" Grid.Column="0"
-			                TagSource="{Binding SelectedNote.Tags}"
-			                Repository="{Binding Repository}"
-			                Settings="{Binding Settings}"
-			                Changed="TagEditor_OnChanged">
+			                 x:Name="TagEditor"
+			                 TagSource="{Binding SelectedNote.Tags}"
+			                 Repository="{Binding Repository}"
+			                 Settings="{Binding Settings}"
+			                 Changed="TagEditor_OnChanged">
 				<ctrl:TagEditor2.Readonly>
 					<MultiBinding Converter="{StaticResource MBOP}" ConverterParameter="OR">
 						<Binding Path="Settings.IsReadOnlyMode" />
