--- a/Source/AlephNote.App/WPF/Controls/NotesView/NotesViewFlat.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesView/NotesViewFlat.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="AlephNote.WPF.Controls.NotesViewFlat"
+﻿<UserControl x:Class="AlephNote.WPF.Controls.NotesView.NotesViewFlat"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,6 +11,7 @@
 			 xmlns:settings="clr-namespace:AlephNote.Common.Settings.Types;assembly=AlephNote.Common"
              xmlns:services="clr-namespace:MSHC.WPF.Services;assembly=CSharpUtils"
 			 xmlns:ext="clr-namespace:AlephNote.WPF.Extensions"
+			 xmlns:notesView="clr-namespace:AlephNote.WPF.Controls.NotesView"
 			 mc:Ignorable="d" 
 			 d:DesignHeight="300" d:DesignWidth="150">
 	<UserControl.Resources>
@@ -35,7 +36,7 @@
 		</Style>
 	</UserControl.Resources>
 
-	<Grid x:Name="RootGrid" d:DataContext="{d:DesignInstance self:NotesViewFlat}" >
+	<Grid x:Name="RootGrid" d:DataContext="{d:DesignInstance notesView:NotesViewFlat}" >
 		<ListView x:Name="NotesList"
 					  AllowDrop="True"
 					  Drop="NotesList_Drop"
