--- a/Source/AlephNote.App/WPF/Controls/NotesView/NotesViewHierachical.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesView/NotesViewHierachical.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="AlephNote.WPF.Controls.NotesViewHierachical"
+﻿<UserControl x:Class="AlephNote.WPF.Controls.NotesView.NotesViewHierachical"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,6 +11,7 @@
 			 xmlns:services="clr-namespace:MSHC.WPF.Services;assembly=CSharpUtils"
 			 xmlns:ext="clr-namespace:AlephNote.WPF.Extensions"
 			 xmlns:locconv="clr-namespace:AlephNote.WPF.Converter"
+			 xmlns:notesView="clr-namespace:AlephNote.WPF.Controls.NotesView"
 			 mc:Ignorable="d" 
 			 d:DesignHeight="300" d:DesignWidth="150">
 
@@ -37,7 +38,7 @@
 	</UserControl.Resources>
 
 
-	<Grid x:Name="RootGrid" d:DataContext="{d:DesignInstance self:NotesViewHierachical}" >
+	<Grid x:Name="RootGrid" d:DataContext="{d:DesignInstance notesView:NotesViewHierachical}" >
 		
 		<Grid.RowDefinitions>
 			<RowDefinition Height="{Binding NotesViewFolderHeight, Mode=TwoWay}" MinHeight="20" />
