Set TitleCaretBrush in theme
--> fixes #124

--- a/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
@@ -257,6 +257,7 @@
 					 x:Name="TitleTextBox"
 					 Background="Transparent"
 					 Foreground="{ext:ThemeBinding 'window.notetitle:foreground'}" 
+					 CaretBrush="{ext:ThemeBinding 'window.notetitle:caret'}" 
 					 FontSize="{Binding Settings.TitleFontSize, Converter={locconv:FontSizeToInt}}" 
 					 FontFamily="{Binding Settings.TitleFontFamily, Converter={locconv:FontNameToFontFamily}}" 
 					 FontWeight="{Binding Settings.TitleFontModifier, Converter={locconv:FontModifierToFontWeight}}" 
