--- a/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
@@ -190,7 +190,7 @@
 				</Border>
 			</Popup>
 
-			<controls:GlobalSearchTextBox Grid.Row="0" Grid.Column="1" Margin="0,2" SearchText="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" x:Name="GlobalSearchBar" />
+			<controls:GlobalSearchTextBox Grid.Row="0" Grid.Column="1" Margin="0,2" SearchText="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" SearchDelayMode="{Binding Settings.GlobalSearchDelay}"  x:Name="GlobalSearchBar" />
 
 			<Button Grid.Row="0" Grid.Column="2" Margin="2" Padding="0" FontWeight="Bold" 
 					Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" 
